# PortableEngine

./: .gitignore  CMakeLists.txt  PortableEngine.sln  premake5.lua  readme.md
Assets/Models/: duo.fbx  index_controller.blend  index_controller.blend1  index_controller.stl  plane.fbx  stage.blend  stage.blend1  stage.fbx
PE_Core/: AABB.h  AABBSystem.cpp  AABBSystem.h  AssetBrowserWindow.cpp  BillboardSystem.cpp  BillboardSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  EngineCameraControllerSystem.cpp  EntityListWindow.cpp  EntityListWindow.h  GameWindow.h  GizmoSystem.cpp  GizmoSystem.h  IAssetManager.cpp  IAssetManager.h  IGraphicsAPI.h  IImageGraphicsData.h  IInputSystem.h  IPlatform.h  IRenderSystem.cpp  IRenderSystem.h  IRenderer.h  IXRAPI.cpp  IXRAPI.h  ImageSelector.cpp  ImageSelector.h  ImageSystem.cpp  ImageSystem.h  InspectorGUI.cpp  InspectorGUI.h  InspectorWindow.cpp  InspectorWindow.h  LightsSystem.cpp  LightsSystem.h  Mesh.h  MeshCreateInfo.h  MeshLoaderSystem.cpp  MeshLoaderSystem.h  (+33 more)
PE_DX11/: CMakeLists.txt  DIrectXRenderer.h  DirectX11ImageGraphicsData.h  DirectX11ShaderProgram.h  DirectXAPI.cpp  DirectXAPI.h  DirectXRenderSystem.cpp  DirectXRenderSystem.h  DirectXRenderer.cpp  PE_DX11.vcxitems  SimpleShader.h  XRGraphicsPlugin_DirectX11.cpp
PE_DX11/HLSL/Pixel/: NormalMapPS.hlsl  PixelShader.hlsl  PixelShader_LitColor.hlsl  PixelShader_LitTextured.hlsl
PE_Linux/: CMakeLists.txt  LinuxAssetManager.cpp  LinuxAssetManager.h  LinuxInputSystem.cpp  LinuxInputSystem.h  LinuxPlatform.cpp  LinuxPlatform.h
PE_OpenGL/: CMakeLists.txt  GLRenderSystem.cpp  GLRenderSystem.h  GLRenderer.cpp  GLRenderer.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLESContext.cpp  OpenGLESContext.h  OpenGLImageGraphicsData.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  PE_OpenGL.vcxitems  Shader.cpp  Shader.h  WinOpenGLContext.cpp
PE_Win32/: CMakeLists.txt  NormalMapPS.hlsl  NormalMapVS.hlsl  PixelShader.hlsl  PixelShader_LitColor.hlsl  PixelShader_LitTextured.hlsl  PixelShader_UnlitColor.hlsl  ShaderHeader.hlsli  VertexShader.hlsl  VertexShader_UnlitColor.hlsl  WindowsInputSystem.cpp  WindowsPlatform.cpp
PE_XR/: CMakeLists.txt  IXRAPI.h  IXRGraphicsPlugin.h  MockXRAPI.cpp  MockXRAPI.h  PE_XR.vcxitems  PE_XR.vcxitems.filters  WebXRAPI.cpp  WebXRAPI.h  XRAPI.cpp  XRAPI.h
PE_XR/Graphics_Plugins/DirectX11/: XRGraphicsPlugin_DirectX11.cpp  XRGraphicsPlugin_DirectX11.h
PE_XR/Graphics_Plugins/OpenGL/: XRGraphicsPlugin_OpenGL.cpp  XRGraphicsPlugin_OpenGL.h
PE_XR/Platform_Plugins/Win32/: XRPlatformPlugin_Win32.cpp  XRPlatformPlugin_Win32.h
PortableEngine/: AABBSystem.cpp  AssetBrowserWindow.cpp  AssetBrowserWindow.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  Core.cpp  Core.h  DIrectXRenderer.h  DXCore.cpp  DXCore.h  DirectX11ImageGraphicsData.h  DirectXAPI.cpp  DirectXAPI.h  DirectXRenderSystem.cpp  DirectXRenderSystem.h  DirectXRenderer.cpp  EmscriptenAssetManager.cpp  EmscriptenAssetManager.h  EmscriptenInputSystem.cpp  EmscriptenInputSystem.h  EmscriptenPlatform.cpp  EmscriptenPlatform.h  EngineCameraControllerSystem.cpp  EngineCameraControllerSystem.h  Entity.cpp  Entity.h  EntityListWindow.h  GLCore.cpp  GLCore.h  GLRenderSystem.cpp  GLRenderSystem.h  GLRenderer.cpp  GLRenderer.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  (+91 more)
PortableEngine/Shaders/GLSL/: fragment.glsl
PortableEngine/cmakebuild/: vr.js
PortableEngine_Web/: CMakeLists.txt  EmscriptenAssetManager.cpp  EmscriptenAssetManager.h  EmscriptenInputSystem.cpp  EmscriptenInputSystem.h  EmscriptenPlatform.cpp  EmscriptenPlatform.h  Main.cpp  PortableEngine_Web.vcxproj  PortableEngine_Web.vcxproj.filters  WebXRAPI.cpp  WebXRAPI.h  build_web.bat
PortableEngine_Web/misc/: imgui.ini
Shaders/GLSL/: fragment-lit-color.glsl  fragment-lit-textured-normal.glsl  fragment-lit-textured.glsl  fragment-unlit-color.glsl  fragment.glsl  vertex-lit-color.glsl  vertex-lit-textured-normal.glsl  vertex-lit-textured.glsl  vertex-unlit-color.glsl  vertex.glsl
Shaders/GLSL-ES/: fragment-lit-color.glsl  fragment-lit-textured-normal.glsl  fragment-lit-textured.glsl  fragment.glsl  vertex-lit-color.glsl  vertex.glsl
