cmake_minimum_required(VERSION 3.16)
project(PortableEngine)
if (UNIX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
endif(UNIX)
file(GLOB mainSrc "PortableEngine/Main.cpp")
include_directories("PE_Core/")
file(GLOB coreSrc "PE_Core/*.cpp" "PE_XR/MockXRAPI.cpp")
include_directories("PE_OpenGL/")
file(GLOB openGlSrc "PE_OpenGL/*.cpp")
if (UNIX)
include_directories("PE_Linux/")
file(GLOB linuxSrc "PE_Linux/*.cpp")
else()
file(GLOB linuxSrc "")
endif(UNIX)
if (WIN32)
include_directories("PE_DX11/")
file(GLOB dx11Src "PE_DX11/*.cpp")
include_directories("PE_Win32/")
file(GLOB win32Src "PE_Win32/*.cpp")
else()
file(GLOB dx11Src "")
file(GLOB win32Src "")
endif()
add_executable(PortableEngine ${coreSrc} ${openGlSrc} ${mainSrc} ${linuxSrc} ${dx11Src} ${win32Src})
find_package(glm CONFIG REQUIRED)
find_package(EnTT CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(GLEW REQUIRED)
find_package(X11 REQUIRED)
find_package(SDL2 CONFIG REQUIRED)
target_link_libraries(PortableEngine PRIVATE GLEW::GLEW)
target_link_libraries(PortableEngine PRIVATE glm::glm)
target_link_libraries(PortableEngine PRIVATE EnTT::EnTT)
target_link_libraries(PortableEngine PRIVATE assimp::assimp)
target_link_libraries(PortableEngine PRIVATE imgui::imgui)
if(UNIX)
target_link_libraries(PortableEngine PRIVATE X11)
target_link_libraries(PortableEngine PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2::SDL2-static)
endif(UNIX)