cmake_minimum_required(VERSION 3.16)
include_directories("." "../PE_Core/")
file(GLOB dx11Src "*.cpp" "*.h")
add_library(PE_DX11 ${dx11Src})
set_property(TARGET PE_DX11 PROPERTY CXX_STANDARD 17)

file(GLOB_RECURSE Shaders "*.hlsl")
foreach(FILE ${Shaders})
    set_source_files_properties(${FILE} DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTIES VS_SHADER_MODEL "5.0")
    get_filename_component(dir ${FILE} DIRECTORY BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    cmake_path(GET dir STEM parent)
    set_source_files_properties(${FILE} DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTIES VS_SHADER_TYPE ${parent})
endforeach(FILE ${Shaders})
