cmake_minimum_required(VERSION 3.16)
include_directories("." "../PE_Core/")
add_compile_definitions(XR_USE_GRAPHICS_API_D3D11 XR_USE_PLATFORM_WIN32)
if(WIN32)
include_directories("../PE_DX11/")
endif(WIN32)
file(GLOB_RECURSE xrSrc "*.cpp" "*.h")
add_library(PE_XR ${xrSrc})
set_property(TARGET PE_XR PROPERTY CXX_STANDARD 17)