cmake_minimum_required(VERSION 3.16)
project(EmscriptenPortTest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z --preload-file ../../Assets/Models --preload-file ../../Shaders/GLSL-ES -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2")
file(GLOB primarySrc "*.cpp")
file(GLOB ImGuizmoSrc "../../ImGuizmo/*.cpp")
add_executable(EmscriptenPortTest esUtil.c ${primarySrc} ../../ImGuizmo/ImGuizmo.cpp)
include_directories(../../../common/glm)
include_directories(../../entt/src/entt)
include_directories(../../imgui)
include_directories(../../json/single_include/nlohmann)
include_directories(../../ImGuizmo)
include_directories(../../imgui/examples)
include_directories(../../stb)
add_subdirectory(../../imgui imgui)
set(CMAKE_EXECUTABLE_SUFFIX ".html")
target_link_libraries(EmscriptenPortTest GLESv2 EGL m X11 imgui)