cmake_minimum_required(VERSION 3.16)
project(EmscriptenPortTest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z --preload-file ../../Assets/Models --preload-file ../../Assets/Images --preload-file ../../Shaders/GLSL-ES -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2 -sUSE_SDL=2 -sASYNCIFY -s ASYNCIFY_IMPORTS=['browserPaste'] --shell-file shell_minimal_runtime.html")
file(GLOB primarySrc "*.cpp")
file(GLOB ImGuizmoSrc "../../ImGuizmo/*.cpp")
file(GLOB core_src "../PE_Core/*.cpp")
file(GLOB opengl_src "../PE_OpenGL/*.cpp")
file(GLOB xr_src "../PE_XR/MockXRAPI.cpp")
add_executable(EmscriptenPortTest ${primarySrc} ${core_src} ${opengl_src} ${xr_src} ../../ImGuizmo/ImGuizmo.cpp)
include_directories(../PE_XR)
include_directories(../../../common/glm)
include_directories(../../entt/src/entt)
include_directories(../../imgui)
include_directories(../../json/single_include/nlohmann)
include_directories(../../ImGuizmo)
include_directories(../../imgui/examples)
include_directories(../../stb)
# accommodate new project structure
include_directories(../PE_Core)
include_directories(../PE_OpenGL)
add_subdirectory(../../imgui imgui)
set(CMAKE_EXECUTABLE_SUFFIX ".html")
set_target_properties(EmscriptenPortTest PROPERTIES OUTPUT_NAME "index")
target_link_libraries(EmscriptenPortTest GLESv2 EGL m X11 imgui)