cmake_minimum_required(VERSION 3.16)
project(EmscriptenPortTest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z --preload-file ../../Assets/Models --preload-file ../../Assets/Images --preload-file ../../Shaders/GLSL-ES --preload-file ../../../../Secret_Meshes/ -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2 -s FULL_ES2=1 -s FULL_ES3=1 -s OFFSCREEN_FRAMEBUFFER=1 -sUSE_SDL=2 -sASYNCIFY -s ASYNCIFY_IMPORTS=['browserPaste'] -s ALLOW_MEMORY_GROWTH=1 --shell-file shell_minimal_runtime.html -s EXPORTED_FUNCTIONS=\"[\'_main\', \'_webxr_render_scene\', \'_webxr_set_eye_measurements\', \'_webxr_set_camera_matrices\', \'_webxr_clear_framebuffer\', \'_webxr_set_input_matrices\']\" -s EXPORTED_RUNTIME_METHODS=\"[\'cwrap\', \'ccall\']\"")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z --preload-file C:/Users/Caleb/Documents/GitHub/PortableEngine/Assets/Models --preload-file C:/Users/Caleb/Documents/GitHub/PortableEngine/Assets/Images --preload-file C:/Users/Caleb/Documents/GitHub/PortableEngine/Shaders/GLSL-ES -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2 -sUSE_SDL=2 -sASYNCIFY -s ASYNCIFY_IMPORTS=['browserPaste'] --shell-file C:/Users/Caleb/Documents/GitHub/PortableEngine/PortableEngine/cmakebuild/shell_minimal_runtime.html")
file(GLOB primarySrc "*.cpp")
file(GLOB ImGuizmoSrc "../../ImGuizmo/*.cpp")
file(GLOB core_src "../PE_Core/*.cpp")
file(GLOB opengl_src "../PE_OpenGL/*.cpp")
file(GLOB xr_src "../PE_XR/*.cpp")
add_executable(EmscriptenPortTest ${primarySrc} ${core_src} ${opengl_src} ${xr_src} ../../ImGuizmo/ImGuizmo.cpp)
include_directories(../PE_XR)
include_directories(../../../common/glm)
include_directories(../../entt/src/entt)
include_directories(../../imgui)
include_directories(../../json/single_include/nlohmann)
include_directories(../../ImGuizmo)
include_directories(../../imgui/examples)
include_directories(../../stb)
include_directories(../../assimp/emscripten_build/contrib/zlib)
include_directories(../../assimp/build/include)
include_directories(../../assimp/include)
# accommodate new project structure
include_directories(../PE_Core)
include_directories(../PE_OpenGL)
add_subdirectory(../../imgui imgui)
# add_subdirectory(../../assimp assimp)
set(CMAKE_EXECUTABLE_SUFFIX ".html")
add_library(assimp STATIC IMPORTED)
SET_PROPERTY (
    TARGET assimp PROPERTY IMPORTED_LOCATION C:/Users/Caleb/Documents/GitHub/assimp/emscripten_build/lib/libassimp.a)
add_library(zlib STATIC IMPORTED)
SET_PROPERTY (
    TARGET zlib PROPERTY IMPORTED_LOCATION C:/Users/Caleb/Documents/GitHub/assimp/emscripten_build/contrib/zlib/libzlibstatic.a)
set_target_properties(EmscriptenPortTest PROPERTIES OUTPUT_NAME "index")
target_link_libraries(EmscriptenPortTest GLESv2 EGL m X11 imgui assimp zlib)